# Blackjack

./: .gitignore  README.md  setup.cfg
src/blackjack/: __init__.py  deck.py  game.py  player.py
tests/: __init__.py  test_deck.py
