[metadata]
name = blackjack
description =
author = richard boyne
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = False
packages = find:
python_requires = >=3.8
package_dir =
    =src

[options.packages.find]
where = src

[coverage:report]
show_missing = true
fail_under = 100
exclude_lines =
    pragma: no cover
    if __name__ == main

[coverage:run]
omit =
    **/__init__.py
source =
    src/

[flake8]
max-line-length = 100
ignore =
exclude =
    src/*/version.py,
    __pycache__,
    # tests/*
